# MarketMind

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  LICENSE.repo.recommended  Makefile  PROJECT_PLAN.md  Project_Report.md  README.md  README.repo.recommended.md  USAGE_GUIDE.md  alembic.ini  app.py  dataset.csv  docker-compose.dev.yml  marketing_modeling.py  marketing_report.txt  pyproject.toml  requirements.txt  start-backend.bat  start-backend.sh  start-project.bat  start-project.sh
.github/workflows/: check.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_users_and_project_ownership.py  0002_users_project_ownership.py  0003_make_owner_user_id_nullable.py  0004_add_user_role.py
analysis/: README.md  marketing_modeling.py  modeling.md  requirements.txt  分析报告.md
analysis/code_files/: config.py  data_preprocessing.py  exp_association.py  exp_clustering.py  exp_elasticity_robust.py  exp_montecarlo.py  exp_timeseries.py  exp_uplift.py  feature_engineering.py  project_plan.md
analysis/docs/: modeling_idea.md
analysis/experimental_docs/: 00_实验汇总报告.md  marketer_report.md  report_01_preprocessing.md  report_02_features.md  report_03_clustering.md  report_04_association.md  report_06_marketer.md  report_10_timeseries.md  report_11_clv.md  report_12_elasticity_robustness.md  report_13_montecarlo.md
analysis_2/code_files/: causal_dml.py  exp_clv.py  exp_marketer.py  exp_recommendation.py
analysis_2/docs/: modeling_idea.md
analysis_2/experimental_docs/: report_05_recommendation.md  report_07_lightgcn.md  report_08_uplift.md
backend/: README.md  __init__.py  main.py  pyproject.toml
backend/abilities/: __init__.py
backend/api/: ai_voice.py  analysis.py  association.py  auth.py  auth_dependencies.py  clustering.py  dependencies.py  error_mapping.py  llm.py  prediction.py  projects.py  recommend.py  samples.py  voice.py
backend/core/: analysis.py  config.py  errors.py  llm.py  recommend.py  runtime_checks.py  storage.py
backend/models/: auth.py  project.py  schemas.py
backend/providers/: __init__.py  admin_dtos.py  admin_user_provider.py  alert_provider.py  analysis_artifact_provider.py  analysis_event_stream_provider.py  analysis_job_provider.py  analysis_job_queue_provider.py  analysis_model_store_provider.py  association_rule_store_provider.py  auth_dtos.py  auth_token_provider.py  container.py  dataset_provider.py  dtos.py  env_file_provider.py  generated_asset_provider.py  infrastructure_health_provider.py  llm_provider.py  log_query_provider.py  object_storage_provider.py  password_hasher_provider.py  project_file_storage_provider.py  project_repository_provider.py  recommendation_model_store_provider.py  regularized_dataset_provider.py  retail_analysis_state_provider.py  retail_dataset_provider.py  settings_inspection_provider.py  speech_synthesis_provider.py  sse_ticket_provider.py  telemetry_dtos.py  telemetry_provider.py  user_directory_provider.py
backend/scripts/: bootstrap_admin.py
backend/services/: ai_voice_service.py  analysis_service.py  association_service.py  clustering_service.py  model_builder_service.py  prediction_service.py  recommender_service.py  tts_service.py  voice_service.py
backend/workers/: retail_analysis_worker.py
docs/: ARCHITECTURE.md  PROJECT_PLAN.md  Project_Report.md  QUICKSTART.md  README.md  TTS_VOICE_INVENTORY.md  USAGE_GUIDE.md  abolish-tts-plan.md  backend-api.md  commands.md  development.md  e2e-auth-flow-analysis.md  env.md  frontend-api-integration-plan.md  frontend-backend-lack-port.md  index.md  project-solution-design.md  requirements-analysis.md
docs/admin/: admin-settings-edit-checklist.md
docs/architecture/: analysis-v2-integration-checklist.md  analysis-v2-integration-design.md  architecture-change.md  construction-checklist.md  data-processing-echarts-frontend-checklist.md  data-processing-pipeline-integration-checklist.md  data-processing-pipeline-integration-design.md  data-processing-pipeline-review-fix-plan.md  postgres-redis-docker-migration-plan.md  project-script-split-checklist.md  user-system-auth-checklist.md  user-system-auth-design.md
docs/archive/: README.md  data-processing-echarts-frontend-design.md  data-processing-project-entry-report.md
docs/deploy/: USAGE_GUIDE.md  backend-api.md  development.md  env.md
docs/develop/: e2e-auth-flow-fix-checklist.md
docs/intro/: INTRO_PAGE_BRIEF.md
docs/requirements/: software-requirements-specification.md  user-story.md
frontend/: .env.development  .env.production  README.md  index.html  init-vue.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: deploy-project.bat  deploy-project.sh  init-samples-to-minio.py  setup-admin.sh  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  start-project.bat  start-project.sh  start-worker.bat  start-worker.sh
scripts/deploy/: README.md  docker-compose.infra.yml  init-samples-to-minio.py  install-backend.sh  install-frontend.sh
scripts/postgres-init/: 01-create-test-db.sql
tests/: conftest.py  test_architecture_imports.py
tests/abilities/: test_association_rule_abilities.py  test_prediction_and_clustering_abilities.py  test_recommendation_abilities.py  test_report_and_text_suggestion_abilities.py  test_report_and_voice_abilities.py
tests/admin/: test_admin_auth.py  test_admin_llm_config.py  test_admin_logs_contracts.py  test_admin_settings_contracts.py  test_admin_settings_edit.py  test_admin_users_contracts.py
tests/api/: conftest.py  test_auth_contracts.py  test_controller_thinness.py  test_current_api_contracts.py  test_data_processing_analysis_contracts.py  test_frontend_api_matrix_contracts.py  test_project_data_processing_entry_contracts.py  test_retail_analysis_contracts.py  test_sample_files_contracts.py  (+1 more)
(+367 files in other folders)
