[project]
name = "marketmind"
version = "1.0.0"
description = "超市AI营销系统 - 数据分析与智能营销决策平台"
authors = [
    {name = "MarketMind Team", email = "team@marketmind.com"}
]
requires-python = ">=3.13,<3.14"
license = "MIT"
keywords = ["data-analysis", "machine-learning", "marketing", "retail", "ai"]

dependencies = [
    # 数据处理
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # 机器学习
    "scikit-learn>=1.4.0",
    "mlxtend>=0.23.0",
    # 可视化
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Web界面
    "streamlit>=1.31.0",
    "httpx>=0.24.0",
    # 时间序列
    "statsmodels>=0.14.0",
    # 工具库
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.2",
    "fastapi>=0.123.5",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "aiofiles>=25.1.0",
    "pydantic-settings>=2.12.0",
    # 数据库基础设施
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.4",
    "alembic>=1.13.2",
    "redis>=7.4.0",
    "rq>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "bcrypt<5.0",
    "minio>=7.2.20",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["analysis/code_files", "analysis/data-processing-pipeline"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

# Retail signal math and DML/ML code uses uppercase matrix symbols consistent with statistical notation.
[tool.ruff.lint.per-file-ignores]
"backend/abilities/retail/build_retail_recommendation_signals.py" = ["N806"]
"backend/abilities/retail/rank_retail_recommendations.py" = ["N806"]
"backend/abilities/universal_analysis/common.py" = ["N803", "N806"]
"backend/abilities/universal_analysis/build_profile_segments.py" = ["N803", "N806"]
"backend/abilities/universal_analysis/estimate_universal_promotion_effect.py" = ["N803", "N806"]
"backend/abilities/universal_analysis/mine_universal_associations.py" = ["N803", "N806"]
"backend/abilities/universal_analysis/rank_universal_recommendations.py" = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.workspace]
members = [
    "backend",
]
